templates linked including url_for

--- a/templates/deleteItem.html
+++ b/templates/deleteItem.html
@@ -9,3 +9,5 @@
       <input type="submit" value="No">
     </div>
 </form>
+
+<a href="{{ url_for('allItems', catagory_name = catagory.name) }}">cancel</a>
