--- a/templates/newItem.html
+++ b/templates/newItem.html
@@ -19,3 +19,5 @@
       <input type="submit" value="Add">
     </div>
 </form>
+
+<a href="{{ url_for('allItems', catagory_name = catagory.name) }}">cancel</a>
