--- a/templates/catagories.html
+++ b/templates/catagories.html
@@ -1,4 +1,7 @@
+{% extends "base.html" %}
+{% block content %}
 {% for i in catagories %}
-<h2><a href="/{{i.name}}/items">{{i.name}}</a></h2>
+<h2><a href="{{ url_for('allItems', catagory_name = i.name) }}">{{i.name}}</a></h2>
 <br>
 {% endfor %}
+{% endblock %}
