--- a/templates/items.html
+++ b/templates/items.html
@@ -1,22 +1,41 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+<a href="{{ url_for('allCatagories') }}"><button type="button" class="btn btn-info btn-lg">Back</button></a>
+
 {% for i in items %}
 <h2>{{i.name}}</h2>
 <br>
 <p>{{i.description}}</p>
-<a href="{{ url_for('editItem', catagory_name = catagory.name, item_name = i.name) }}">edit</a>
-<a href="{{ url_for('deleteItem', catagory_name = catagory.name, item_name = i.name) }}">delete</a>
+<a href="{{ url_for('editItem', catagory_name = catagory.name, item_name = i.name) }}"><button type="button" class="btn btn-info btn-lg">edit</button></a>
+<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Delete</button>
 {% endfor %}
 
 <br>
 <br>
-<a href="{{ url_for('newItem', catagory_name = catagory.name) }}">add a new item</a>
+<a href="{{ url_for('newItem', catagory_name = catagory.name) }}"><button type="button" class="btn btn-info btn-lg">add a new item</button></a>
 
 
-<!-- {% for i in catagories %}
-<h2><a href="{{ url_for('allItems', catagory_name = i.name) }}">{{i.name}}</a></h2>
-<br>
-{% endfor %} -->
+
+<div class="container">
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-body">
+          <p>Are you sure you want to delete this item?</p>
+        </div>
+        <div class="modal-footer">
+        	<button type="button" class="btn btn-default">Yes</button>
+          	<button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+</div>
+
 
 {% endblock %}
