- correct mispelling of category/categories - fix routing - pages all linked
still need:
- user section
- post and get requests

--- a/templates/editItem.html
+++ b/templates/editItem.html
@@ -20,4 +20,4 @@
     </div>
 </form>
 
-<a href="{{ url_for('allItems', catagory_name = catagory.name) }}">cancel</a>
+<a href="{{ url_for('allItems', category_id = category.id) }}">cancel</a>
