--- a/templates/items.html
+++ b/templates/items.html
@@ -2,20 +2,24 @@
 
 {% block content %}
 
-<a href="{{ url_for('allCatagories') }}"><button type="button" class="btn btn-info btn-lg">Back</button></a>
+<a href="{{ url_for('allCategories') }}"><button type="button" class="btn btn-info btn-lg">Back</button></a>
 
 {% for i in items %}
 <h2>{{i.name}}</h2>
 <br>
 <p>{{i.description}}</p>
-<a href="{{ url_for('editItem', catagory_name = catagory.name, item_name = i.name) }}"><button type="button" class="btn btn-info btn-lg">edit</button></a>
+
+
+<a href="{{ url_for('editItem', category_id = category.id, item_id = i.id) }}"><button type="button" class="btn btn-info btn-lg">edit</button></a>
+
+
 <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Delete</button>
 {% endfor %}
 
 <br>
 <br>
-<a href="{{ url_for('newItem', catagory_name = catagory.name) }}"><button type="button" class="btn btn-info btn-lg">add a new item</button></a>
 
+<a href="{{ url_for('newItem', category_id = category.id) }}"><button type="button" class="btn btn-info btn-lg">add a new item</button></a>
 
 
 <div class="container">
