--- a/templates/newItem.html
+++ b/templates/newItem.html
@@ -20,4 +20,4 @@
     </div>
 </form>
 
-<a href="{{ url_for('allItems', catagory_name = catagory.name) }}">cancel</a>
+<a href="{{ url_for('allItems', category_id = category.id) }}">cancel</a>
