--- a/templates/editItem.html
+++ b/templates/editItem.html
@@ -4,13 +4,13 @@
       <label class="user-label">Name</label>
     </div>
     <div class="">
-      <input type="text" name="subject" value="{{name}}">
+      <input type="text" name="name" value="{{name}}">
     </div>
     <div class="">
       <label class="user-label">Description</label>
     </div>
     <div class="">
-      <textarea name="comment" value="{{description}}">{{description}}</textarea>
+      <textarea name="description" value="{{description}}">{{description}}</textarea>
     </div>
     <div class="">
       <div class="error">{{error}}</div>
