--- a/templates/items.html
+++ b/templates/items.html
@@ -33,8 +33,10 @@
           <p>Are you sure you want to delete this item?</p>
         </div>
         <div class="modal-footer">
-        	<button type="button" class="btn btn-default">Yes</button>
+        <form method="get" action="">
+        	<button type="submit" formmethod="post" name="delete" class="btn btn-default">Yes</button>
           	<button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+         </form>
         </div>
       </div>
       
