--- a/templates/deleteItem.html
+++ b/templates/deleteItem.html
@@ -1,13 +1,15 @@
-
-
 <form method="post">
-    <h2 class="sub-title">Are you sure you want to delete item?</h2>
+    <h2 class="sub-title">Are you sure you want to delete this item?</h2>
+    <h4>{{name}}</h4>
+    <p>{{description}}</p>
+    <div class="">
+      <div class="error">{{error}}</div>
+    </div>
     <div class="">
       <input type="submit" value="Yes">
     </div>
     <div class="">
-      <input type="submit" value="No">
+      <a href="{{ url_for('allItems', category_id = category.id) }}">no</a>
     </div>
+    
 </form>
-
-<a href="{{ url_for('allItems', catagory_name = catagory.name) }}">cancel</a>
