--- a/templates/items.html
+++ b/templates/items.html
@@ -9,40 +9,16 @@
 <br>
 <p>{{i.description}}</p>
 
-
 <a href="{{ url_for('editItem', category_id = category.id, item_id = i.id) }}"><button type="button" class="btn btn-info btn-lg">edit</button></a>
 
+<a href="{{ url_for('deleteItem', category_id = category.id, item_id = i.id) }}"><button type="button" class="btn btn-info btn-lg">delete</button></a>
 
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Delete</button>
+
 {% endfor %}
 
 <br>
 <br>
 
 <a href="{{ url_for('newItem', category_id = category.id) }}"><button type="button" class="btn btn-info btn-lg">add a new item</button></a>
-
-
-
-<div class="container">
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-      <!-- Modal content-->
-      <div class="modal-content">
-        <div class="modal-body">
-          <p>Are you sure you want to delete this item?</p>
-        </div>
-        <div class="modal-footer">
-        <form method="get" action="">
-        	<button type="submit" formmethod="post" name="delete" class="btn btn-default">Yes</button>
-          	<button type="button" class="btn btn-default" data-dismiss="modal">No</button>
-         </form>
-        </div>
-      </div>
-      
-    </div>
-  </div>
-</div>
-
 
 {% endblock %}
