--- a/templates/categories.html
+++ b/templates/categories.html
@@ -5,7 +5,8 @@
 {% for i in categories %}
 <h2><a href="{{ url_for('allItems', category_id = i.id) }}">{{i.name}}</a></h2>
 <br>
-
+<a href="{{ url_for('deleteCategory', category_id = i.id) }}">delete</a>
+<br>
 {% endfor %}
 
 <a href="{{ url_for('addCategory') }}">Add New Category</a>
