--- a/templates/items.html
+++ b/templates/items.html
@@ -9,6 +9,8 @@
 <br>
 <p>{{i.description}}</p>
 
+
+
 <a href="{{ url_for('editItem', category_id = category.id, item_id = i.id) }}"><button type="button" class="btn btn-info btn-lg">edit</button></a>
 
 <a href="{{ url_for('deleteItem', category_id = category.id, item_id = i.id) }}"><button type="button" class="btn btn-info btn-lg">delete</button></a>
@@ -19,6 +21,9 @@
 <br>
 <br>
 
+{% if user_is_logged_in %}
 <a href="{{ url_for('newItem', category_id = category.id) }}"><button type="button" class="btn btn-info btn-lg">add a new item</button></a>
+{% endif %}
+
 
 {% endblock %}
