--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
+
 <!--   <link type="text/css" rel="stylesheet" href="/static/css/main.css" />
   <link type="text/css" rel="stylesheet" href="/static/css/welcome.css" />
   <link type="text/css" rel="stylesheet" href="/static/css/form.css" />
@@ -23,6 +23,14 @@
 
 <body>
   <h1>Item Catalog</h1>
+
+  {% if user_is_logged_in %}
+
+<p>{{user}} is logged in</p>
+
+{% endif %}
+
+  
   {% block content %}   
 
   {% endblock %}
