--- a/templates/categories.html
+++ b/templates/categories.html
@@ -2,10 +2,14 @@
 {% block content %}
 
 
+
 {% for i in categories %}
 <h2><a href="{{ url_for('allItems', category_id = i.id) }}">{{i.name}}</a></h2>
 <br>
+
+{% if user == i.user_id %}
 <a href="{{ url_for('deleteCategory', category_id = i.id) }}">delete</a>
+{% endif %}
 <br>
 {% endfor %}
 
