--- a/templates/base.html
+++ b/templates/base.html
@@ -24,13 +24,19 @@
 <body>
   <h1>Item Catalog</h1>
 
-  {% if user_is_logged_in %}
+{% if user_is_logged_in %}
+
+
+  <p><a href="{{ url_for('gdisconnect') }}"><button type="button" class="btn btn-info btn-lg">logout</button></a></p>
 
 <p>{{user}} is logged in</p>
 
+{% else %}
+<p><a href="{{ url_for('showLogin') }}"><button type="button" class="btn btn-info btn-lg">login</button></a></p>
+
 {% endif %}
 
-  
+
   {% block content %}   
 
   {% endblock %}
