--- a/templates/deleteCategory.html
+++ b/templates/deleteCategory.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+
+{% block content %}
+
 <form method="post">
     <h2 class="sub-title">Are you sure you want to delete this category?</h2>
     <h4>{{name}}</h4>
@@ -9,3 +13,5 @@
     </div>
     
 </form>
+
+{% endblock %}
