--- a/templates/editItem.html
+++ b/templates/editItem.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+
+{% block content %}
+
 <form method="post">
     <h2 class="sub-title">Update Item</h2>
     <div class="">
@@ -21,3 +25,4 @@
 </form>
 
 <a href="{{ url_for('allItems', category_id = category.id) }}">cancel</a>
+{% endblock %}
