--- a/templates/login.html
+++ b/templates/login.html
@@ -1,20 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
+{% extends "base.html" %}
 
-  <!--LOAD PRE-REQUISITES FOR GOOGLE SIGN IN -->
-   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
-  </script>
-
-<script src="//apis.google.com/js/platform.js?onload=start"> </script>
-
-<!-- END PRE-REQUISITES FOR GOOGLE SIGN IN -->
-
-
-</head>
-
-
-<body> 
+{% block content %}
 
 
 
@@ -67,6 +53,5 @@ function signInCallback(authResult) {
 
 <!--END GOOGLE PLUS SIGN IN BUTTON -->
 
-  </body>
 
-  </html>
+{% endblock %}
