--- a/templates/deleteItem.html
+++ b/templates/deleteItem.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+
+{% block content %}
+
 <form method="post">
     <h2 class="sub-title">Are you sure you want to delete this item?</h2>
     <h4>{{name}}</h4>
@@ -13,3 +17,4 @@
     </div>
     
 </form>
+{% endblock %}
