--- a/templates/deleteItem.html
+++ b/templates/deleteItem.html
@@ -2,19 +2,23 @@
 
 {% block content %}
 
-<form method="post">
-    <h2 class="sub-title">Are you sure you want to delete this item?</h2>
-    <h4>{{name}}</h4>
-    <p>{{description}}</p>
-    <div class="">
-      <div class="error">{{error}}</div>
-    </div>
-    <div class="">
-      <input type="submit" value="Yes">
-    </div>
-    <div class="">
-      <a href="{{ url_for('allItems', category_id = category.id) }}">no</a>
-    </div>
-    
-</form>
+<div class="card">
+  <form method="post">
+      <h4 class="sub-title">Are you sure you want to delete this item?</h4>
+      <div class="item-content">
+        <h3>{{name}}</h3>
+        <p>{{description}}</p>
+      </div>
+      <div class="">
+        <div class="error">{{error}}</div>
+      </div>
+      <div class="">
+        <input class="btn btn-info" type="submit" value="Yes">
+      </div>
+  </form>
+</div>
+
+<div class="">
+  <a href="{{ url_for('allItems', category_id = category.id) }}"><button type="button" class="btn btn-info">No</button></a>
+</div>
 {% endblock %}
