--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,36 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js">
+  </script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="//apis.google.com/js/platform.js?onload=start"> </script>
 
-{% block content %}
+  <link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}" />
+  <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
+  <!-- <link type="text/css" rel="stylesheet" href="/static/style.css" /> -->
+  
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet" />
+
+  <title>Items Catalog</title>
+</head>
+
+<body>
+
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <p id="item-logo" class="item-nav">
+        	<a href="{{ url_for('allCategories') }}">Catalog</a>
+        </p>
+      </div>
+    </div>
+  </nav>
 
 
 
@@ -52,6 +82,3 @@ function signInCallback(authResult) {
 </script>
 
 <!--END GOOGLE PLUS SIGN IN BUTTON -->
-
-
-{% endblock %}
