--- a/templates/newItem.html
+++ b/templates/newItem.html
@@ -2,28 +2,32 @@
 
 {% block content %}
 
-<form method="post">
-    <h2 class="sub-title">New Item</h2>
-    <div class="">
-      <label class="user-label">Name</label>
-    </div>
-    <div class="">
-      <input type="text" name="name" value="{{name}}">
-    </div>
-    <div class="">
-      <label class="user-label">Description</label>
-    </div>
-    <div class="">
-      <textarea name="description" value="{{description}}">{{description}}</textarea>
-    </div>
-    <div class="">
-      <div class="error">{{error}}</div>
-    </div>
-    <div class="">
-      <input type="submit" value="Add">
-    </div>
-</form>
+<div class="card">
+  <form method="post">
+      <h2 class="sub-title">New Item</h2>
+      <div class="">
+        <label class="user-label">Name</label>
+      </div>
+      <div class="">
+        <input type="text" name="name" value="{{name}}">
+      </div>
+      <div class="">
+        <label class="user-label">Description</label>
+      </div>
+      <div class="">
+        <textarea name="description" value="{{description}}">{{description}}</textarea>
+      </div>
+      <div class="">
+        <div class="error">{{error}}</div>
+      </div>
+      <div class="">
+        <input type="submit" value="Add">
+      </div>
+  </form>
+</div>
 
-<a href="{{ url_for('allItems', category_id = category.id) }}">cancel</a>
+<div class="">
+  <a href="{{ url_for('allItems', category_id = category.id) }}"><button type="button" class="btn btn-info">No</button></a>
+</div>
 
 {% endblock %}
