--- a/templates/newcat.html
+++ b/templates/newcat.html
@@ -2,22 +2,26 @@
 
 {% block content %}
 
-<form method="post">
-    <h2 class="sub-title">New Category</h2>
-    <div class="">
-      <label class="user-label">Name</label>
-    </div>
-    <div class="">
-      <input type="text" name="name" value="{{name}}">
-    </div>
-    <div class="">
-      <div class="error">{{error}}</div>
-    </div>
-    <div class="">
-      <input type="submit" value="Add">
-    </div>
-</form>
+<div class="card">
+  <form method="post">
+      <h2 class="sub-title">New Category</h2>
+      <div class="">
+        <label class="user-label">Name</label>
+      </div>
+      <div class="">
+        <input type="text" name="name" value="{{name}}">
+      </div>
+      <div class="">
+        <div class="error">{{error}}</div>
+      </div>
+      <div class="">
+        <input type="submit" value="Add">
+      </div>
+  </form>
+</div>
 
-<a href="{{ url_for('allCategories') }}">cancel</a>
+<div class="">
+  <a href="{{ url_for('allCategories') }}"><button type="button" class="btn btn-info">Cancel</button></a>
+</div>
 
 {% endblock %}
