user gets redirected to login page if not logged in (including entering certain pages directly)

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   <script src="//apis.google.com/js/platform.js?onload=start"> </script>
 
   <link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}" />
-  <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='style.css')}}" />
+  <link type="text/css" rel="stylesheet" href="/static/style.css?q=2" />
   <!-- <link type="text/css" rel="stylesheet" href="/static/style.css" /> -->
   
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" />
