--- a/templates/newcat.html
+++ b/templates/newcat.html
@@ -6,10 +6,7 @@
   <form method="post">
       <h2 class="sub-title">New Category</h2>
       <div class="">
-        <label class="user-label">Name</label>
-      </div>
-      <div class="">
-        <input type="text" name="name" value="{{name}}">
+        <input type="text" name="name" value="{{name}}" placeholder="category name">
       </div>
       <div class="">
         <div class="error">{{error}}</div>
