--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
+{% if not categories %}
+<div class="alert alert-info"><h4>There are no categories in the database. Would you like to add some?</h4></div>
+{% else %}
 <ul class="list-group">
 	{% for i in categories %}
 	<li class="list-group-item">
@@ -13,6 +16,7 @@
 	</li>
   	{% endfor %}
 </ul>
+{% endif %}
 
 <div class="pull-right">
 	{% if user_is_logged_in %}
