--- a/templates/items.html
+++ b/templates/items.html
@@ -3,29 +3,26 @@
 {% block content %}
 
 
-
-
+{% if not items %}
+<div class="alert alert-info"><h4>There are no items in this category. Would you like to add some?</h4></div>
+{% else %}
 	{% for i in items %}
-<div class="card">
-
-	<div class="card-heading"><h3>{{i.name}}</h3></div>
-	<div class="card-body">
-		<div class="card-description">{{i.description}}</div>
-		{% if user_id == i.user_id %}
-		<div class="card-control pull-right">
-			<a href="{{ url_for('deleteItem', category_id = category.id, item_id = i.id) }}"><button type="button" class="btn btn-info">delete</button></a>
+	<div class="card">
+		<div class="card-heading"><h3>{{i.name}}</h3></div>
+		<div class="card-body">
+			<div class="card-description">{{i.description}}</div>
+			{% if user_id == i.user_id %}
+			<div class="card-control pull-right">
+				<a href="{{ url_for('deleteItem', category_id = category.id, item_id = i.id) }}"><button type="button" class="btn btn-info">delete</button></a>
+			</div>
+			<div class="card-control">
+				<a href="{{ url_for('editItem', category_id = category.id, item_id = i.id) }}"><button type="button" class="btn btn-info">edit</button></a>
+			</div>
+			{% endif %}
 		</div>
-		<div class="card-control">
-			<a href="{{ url_for('editItem', category_id = category.id, item_id = i.id) }}"><button type="button" class="btn btn-info">edit</button></a>
-		</div>
-		
-		{% endif %}
 	</div>
-
-
-</div>
 	{% endfor %}
-
+{% endif %}
 
 <div class="add pull-right">
 	{% if user_is_logged_in %}
