--- a/templates/login.html
+++ b/templates/login.html
@@ -66,7 +66,7 @@ function signInCallback(authResult) {
       success: function(result) {
         // Handle or verify the server response if necessary.
         if (result) {
-          $('#result').html('Login Successful!</br>'+ result + '</br>Redirecting...')
+          $('#result').html('Login Successful!</br></br>Redirecting...')
          setTimeout(function() {
           window.location.href = "/catalog";
          }, 4000);
