--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   <script src="//apis.google.com/js/platform.js?onload=start"> </script>
 
   <link rel="shortcut icon" href="{{url_for('static', filename='favicon.ico')}}" />
-  <link type="text/css" rel="stylesheet" href="/static/style.css?q=2" />
+  <link type="text/css" rel="stylesheet" href="/static/style.css?q=4" />
   <!-- <link type="text/css" rel="stylesheet" href="/static/style.css" /> -->
   
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" />
@@ -25,7 +25,9 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-        <p id="item-logo" class="item-nav">Item Catalog</p>
+        <p id="item-logo" class="item-nav">
+          <a href="{{ url_for('allCategories') }}">Item Catalog</a>
+        </p>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
