--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,13 @@
     </div>
   </nav>
 
-
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for message in messages %}
+        <div class="alert alert-danger" role="alert">{{ message }}</div>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
 
 <!-- GOOGLE PLUS SIGN IN BUTTON-->
 
